--- a/GRS.ipynb
+++ b/GRS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +64,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "factor = pd.concat([pd.read_csv('factor_result/2016FF5.csv'),pd.read_csv('factor_result/2017FF5.csv')], axis= 0)\n",
+    "factor.set_index('date', inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\14913\\AppData\\Local\\Temp\\ipykernel_36020\\979292707.py:49: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  f_grs = float((T/N) * ((T-N-L)/(T-L-1)) * ((alpha.T * np.linalg.inv(cov_resid) * alpha) / (1 + mean_return_factor.T * np.linalg.inv(cov_factor) * mean_return_factor)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(5.306214040619461, 0.040383604177044785)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BM_resid = pd.read_csv('regression_result/regression_BM_resid.csv')\n",
+    "BM_alpha = pd.read_csv('regression_result/regression_BM.csv')\n",
+    "BM_alpha = BM_alpha['Const']\n",
+    "GRS_test(factor, BM_resid, BM_alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\14913\\AppData\\Local\\Temp\\ipykernel_36020\\979292707.py:49: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  f_grs = float((T/N) * ((T-N-L)/(T-L-1)) * ((alpha.T * np.linalg.inv(cov_resid) * alpha) / (1 + mean_return_factor.T * np.linalg.inv(cov_factor) * mean_return_factor)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(3.9366705310226133, 0.07274418058882959)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Inv_resid = pd.read_csv('regression_result/regression_Inv_resid.csv')\n",
+    "Inv_alpha = pd.read_csv('regression_result/regression_Inv.csv')\n",
+    "Inv_alpha = Inv_alpha['Const']\n",
+    "GRS_test(factor, Inv_resid, Inv_alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\14913\\AppData\\Local\\Temp\\ipykernel_36020\\979292707.py:49: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  f_grs = float((T/N) * ((T-N-L)/(T-L-1)) * ((alpha.T * np.linalg.inv(cov_resid) * alpha) / (1 + mean_return_factor.T * np.linalg.inv(cov_factor) * mean_return_factor)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(7.515798429076026, 0.019426173430787452)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OP_resid = pd.read_csv('regression_result/regression_OP_resid.csv')\n",
+    "OP_alpha = pd.read_csv('regression_result/regression_OP.csv')\n",
+    "OP_alpha = OP_alpha['Const']\n",
+    "GRS_test(factor, OP_resid, OP_alpha)"
+   ]
   }
  ],
  "metadata": {
