--- a/GRS.ipynb
+++ b/GRS.ipynb
@@ -9,6 +9,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\"\"\"\n",
     "Function GRS_test(factor, resid, alpha) is to conduct GRS test according \n",
     "to Gibbons, Ross & Shanken(1989) to receive GRS-statistic and p-value.\n",
@@ -78,14 +80,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\14913\\AppData\\Local\\Temp\\ipykernel_36020\\979292707.py:49: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  f_grs = float((T/N) * ((T-N-L)/(T-L-1)) * ((alpha.T * np.linalg.inv(cov_resid) * alpha) / (1 + mean_return_factor.T * np.linalg.inv(cov_factor) * mean_return_factor)))\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(5.306214040619461, 0.040383604177044785)"
@@ -109,14 +103,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\14913\\AppData\\Local\\Temp\\ipykernel_36020\\979292707.py:49: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  f_grs = float((T/N) * ((T-N-L)/(T-L-1)) * ((alpha.T * np.linalg.inv(cov_resid) * alpha) / (1 + mean_return_factor.T * np.linalg.inv(cov_factor) * mean_return_factor)))\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "(3.9366705310226133, 0.07274418058882959)"
@@ -139,14 +125,6 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\14913\\AppData\\Local\\Temp\\ipykernel_36020\\979292707.py:49: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  f_grs = float((T/N) * ((T-N-L)/(T-L-1)) * ((alpha.T * np.linalg.inv(cov_resid) * alpha) / (1 + mean_return_factor.T * np.linalg.inv(cov_factor) * mean_return_factor)))\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
