--- a/GRS.ipynb
+++ b/GRS.ipynb
@@ -99,6 +99,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004064312405166923"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "BM_a = np.abs(BM_alpha).mean()\n",
+    "BM_a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -122,6 +143,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3272762004543406e-05"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Inv_a = np.abs(Inv_alpha)**2\n",
+    "Inv_a.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -141,6 +183,27 @@
     "OP_alpha = pd.read_csv('regression_result/regression_OP.csv')\n",
     "OP_alpha = OP_alpha['Const']\n",
     "GRS_test(factor, OP_resid, OP_alpha)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004101142442207568"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "OP_a = np.abs(OP_alpha).mean()\n",
+    "OP_a"
    ]
   }
  ],
