--- a/report._result.ipynb
+++ b/report._result.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,34 +40,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([pd.read_csv('./group_result/2016_BM_Size.csv'), pd.read_csv('./group_result/2017_BM_Size.csv')])\n",
-    "df2 = df.groupby(['row_count', 'col_count'])['ExcessReturn'].mean()\n",
+    "df_BM = pd.concat([pd.read_csv('./group_result/2016_BM_Size.csv'), pd.read_csv('./group_result/2017_BM_Size.csv')])\n",
+    "df2 = df_BM.groupby(['row_count', 'col_count'])['ExcessReturn'].mean()\n",
     "df_reset = df2.reset_index()\n",
     "df3 = df_reset.pivot(index='row_count', columns='col_count', values='ExcessReturn')\n",
-    "df3.columns.name = None\n",
-    "df3.index.name = None\n",
+    "df3.columns.name = df_BM['row_type'].iat[0]\n",
+    "df3.index.name = df_BM['col_type'].iat[0]\n",
     "df3\n",
     "dfi.export(df3, \"BM_Size.png\", table_conversion=\"matplotlib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0320974580655192"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.concat([pd.read_csv('./group_result/2016_Inv_Size.csv'), pd.read_csv('./group_result/2017_Inv_Size.csv')])\n",
-    "df2 = df.groupby(['row_count', 'col_count'])['ExcessReturn'].mean()\n",
-    "df_reset = df2.reset_index()\n",
-    "df3 = df_reset.pivot(index='row_count', columns='col_count', values='ExcessReturn')\n",
-    "df3.columns.name = None\n",
-    "df3.index.name = None\n",
-    "df3\n",
-    "dfi.export(df3, \"Inv_Size.png\", table_conversion=\"matplotlib\")"
+    "AR_BM = np.abs(df_BM['ExcessReturn']).mean()\n",
+    "AR_BM"
    ]
   },
   {
@@ -76,14 +81,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([pd.read_csv('./group_result/2016_OP_Size.csv'), pd.read_csv('./group_result/2017_OP_Size.csv')])\n",
-    "df2 = df.groupby(['row_count', 'col_count'])['ExcessReturn'].mean()\n",
+    "df_Inv = pd.concat([pd.read_csv('./group_result/2016_Inv_Size.csv'), pd.read_csv('./group_result/2017_Inv_Size.csv')])\n",
+    "df2 = df_Inv.groupby(['row_count', 'col_count'])['ExcessReturn'].mean()\n",
     "df_reset = df2.reset_index()\n",
     "df3 = df_reset.pivot(index='row_count', columns='col_count', values='ExcessReturn')\n",
-    "df3.columns.name = None\n",
-    "df3.index.name = None\n",
+    "df3.columns.name = df_Inv['row_type'].iat[0]\n",
+    "df3.index.name = df_Inv['col_type'].iat[0]\n",
+    "df3\n",
+    "dfi.export(df3, \"Inv_Size.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.031793070918811873"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AR_Inv = np.abs(df_Inv['ExcessReturn']).mean()\n",
+    "AR_Inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_OP = pd.concat([pd.read_csv('./group_result/2016_OP_Size.csv'), pd.read_csv('./group_result/2017_OP_Size.csv')])\n",
+    "df2 = df_OP.groupby(['row_count', 'col_count'])['ExcessReturn'].mean()\n",
+    "df_reset = df2.reset_index()\n",
+    "df3 = df_reset.pivot(index='row_count', columns='col_count', values='ExcessReturn')\n",
+    "df3.columns.name = df_OP['row_type'].iat[0]\n",
+    "df3.index.name = df_OP['col_type'].iat[0]\n",
     "df3\n",
     "dfi.export(df3, \"OP_Size.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.031960388710443904"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AR_OP = np.abs(df_OP['ExcessReturn']).mean()\n",
+    "AR_OP"
    ]
   },
   {
@@ -95,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,10 +206,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GRS</th>\n",
+       "      <th>GRS_P</th>\n",
+       "      <th>A_ai</th>\n",
+       "      <th>A_ai/A_ri</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>BM-Size</th>\n",
+       "      <td>5.30</td>\n",
+       "      <td>0.040</td>\n",
+       "      <td>0.004060</td>\n",
+       "      <td>0.126875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inv-Size</th>\n",
+       "      <td>3.94</td>\n",
+       "      <td>0.073</td>\n",
+       "      <td>0.003167</td>\n",
+       "      <td>0.126875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OP-Size</th>\n",
+       "      <td>7.52</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>0.004100</td>\n",
+       "      <td>0.126875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           GRS  GRS_P      A_ai  A_ai/A_ri\n",
+       "BM-Size   5.30  0.040  0.004060   0.126875\n",
+       "Inv-Size  3.94  0.073  0.003167   0.126875\n",
+       "OP-Size   7.52  0.019  0.004100   0.126875"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_4 = {'GRS':[5.30, 3.94, 7.52],'GRS_P':[0.040, 0.073, 0.019], 'A_ai':[0.00406, 0.003167, 0.00410], 'A_ai/A_ri':[0.00406/0.0320, 0.00406/0.0320, 0.00406/0.0320]}\n",
+    "df = pd.DataFrame(dict_4, index= ['BM-Size', 'Inv-Size', 'OP-Size'])\n",
+    "dfi.export(df, \"Factor_explanation.png\", table_conversion=\"matplotlib\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_BM_reg = pd.read_csv('./regression_result/regression_BM.csv')\n",
+    "dfi.export(df_BM_reg, \"df_BM_reg.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_BM_reg_P = pd.read_csv('./regression_result/regression_BM_pvalue.csv')\n",
+    "dfi.export(df_BM_reg_P, \"df_BM_reg_P.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Inv_reg = pd.read_csv('./regression_result/regression_Inv.csv')\n",
+    "dfi.export(df_Inv_reg, \"df_Inv_reg.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Inv_reg_P = pd.read_csv('./regression_result/regression_Inv_pvalue.csv')\n",
+    "dfi.export(df_Inv_reg_P, \"df_Inv_reg_P.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_OP_reg = pd.read_csv('./regression_result/regression_OP.csv')\n",
+    "dfi.export(df_OP_reg, \"df_OP_reg.png\", table_conversion=\"matplotlib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_OP_reg_P = pd.read_csv('./regression_result/regression_OP_pvalue.csv')\n",
+    "dfi.export(df_OP_reg_P, \"df_OP_reg_P.png\", table_conversion=\"matplotlib\")"
+   ]
   }
  ],
  "metadata": {
@@ -165,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
